Updated open API
